SportManager/force-app/main/default/objects/Club__c/Club__c.object-meta.xml
<CustomObject>
    <label>Club</label>
    <nameField>
        <label>Club Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clubes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>