SportManager/force-app/main/default/objects/Club__c/fields/Liga__c.field-meta.xml
<CustomField>
    <fullName>Liga__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Liga</label>
    <referenceTo>Liga__c</referenceTo>
    <relationshipLabel>Clubes</relationshipLabel>
    <relationshipName>Clubes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>