SportManager/force-app/main/default/objects/Club__c/fields/Poblacion__c.field-meta.xml
<CustomField>
    <fullName>Poblacion__c</fullName>
    <label>Población</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>