SportManager/force-app/main/default/objects/Club__c/fields/Presidente__c.field-meta.xml
<CustomField>
    <fullName>Presidente__c</fullName>
    <label>Presidente</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>