SportManager/force-app/main/default/objects/Club__c/fields/Vicepresidente__c.field-meta.xml
<CustomField>
    <fullName>Vicepresidente__c</fullName>
    <label>Vicepresidente</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>